Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" .bool(\"com\")"
+    "\"art.vandelay@vandelay.co\" .fin(\"com\")"
    ]
   },
   {
