--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" .find(\".com\")"
+    "\"art.vandelay@vandelay.co\" .mys(\".com\")"
    ]
   },
   {
