Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" my_string(\".com\")"
+    "\"art.vandelay@vandelay.co\" my_stringendswith(\".com\")"
    ]
   },
   {
