--- a/index.ipynb
+++ b/index.ipynb
@@ -243,20 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-b4d871e4a5ef>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-10-8391061b6a27>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-b4d871e4a5ef>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"art.vandelay@vandelay.co\" my_stringendswith.com\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-8391061b6a27>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"art.vandelay@vandelay.co\" my_stringendswith.com()\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" my_stringendswith.com"
+    "\"art.vandelay@vandelay.co\" my_stringendswith.com()"
    ]
   },
   {
