Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" my_stringendswith\".com\"()"
+    "\"art.vandelay@vandelay.co\" my_stringendswith(\".com\"()"
    ]
   },
   {
